# risc0-code

./: .gitmodules  README.md
a/host/src/: main.rs
a/methods/guest/: Cargo.toml
bevy/core/: Cargo.toml
bevy/core/src/: lib.rs
bevy/host/: Cargo.toml
bevy/host/src/: main.rs
bevy/methods/: Cargo.toml
bevy/methods/guest/: Cargo.toml
bevy/methods/guest/src/: main.rs
composition/host/: Cargo.toml
composition/host/src/: main.rs
composition/methods/: Cargo.toml
composition/methods/guest/: Cargo.toml
composition/methods/guest/src/: main.rs
erc-20/: run.sh
erc-20/host/: Cargo.toml
erc-20/host/src/: main.rs
erc-20/methods/: Cargo.toml
erc-20/methods/guest/: Cargo.toml
erc-20/methods/guest/src/: main.rs
erc20/: Cargo.toml  README.md
erc20-counter/: anvil_logs.txt
erc20-counter/contracts/: Counter.sol
erc20-counter/methods/: Cargo.toml
erc20-counter/methods/guest/: Cargo.toml
erc20-counter/token-stats/core/src/: lib.rs
erc20-counter/token-stats/host/src/: main.rs
erc20-counter/token-stats/methods/guest/: Cargo.toml
erc20/contracts/: ICounter.sol
erc20/host/: Cargo.toml
erc20/host/src/: lib.rs
erc20/token-stats/: Cargo.toml
erc20/token-stats/core/: Cargo.toml
erc20/token-stats/methods/guest/src/: main.rs
hello/: profile.pb
hello-world/host/: Cargo.toml
hello-world/host/src/: lib.rs  main.rs
hello-world/methods/: Cargo.toml
hello-world/methods/guest/: Cargo.toml
hello-world/methods/guest/src/: main.rs
hello/host/src/: main.rs
hello/methods/guest/: Cargo.toml
json/: profile.pb
json/core/: Cargo.toml
json/core/src/: lib.rs
json/host/: Cargo.toml
json/host/src/: main.rs
json/methods/: Cargo.toml
json/methods/guest/: Cargo.toml
json/methods/guest/src/: main.rs
profiling/: .gitignore  makefile
profiling/host/: Cargo.toml
profiling/host/src/: main.rs
profiling/methods/guest/: Cargo.toml
profiling/methods/guest/src/: main.rs
sha/host/src/: main.rs
sha/methods/guest/: Cargo.toml
wasm/: profile.pb
wasm/host/: Cargo.toml
wasm/host/src/: main.rs
wasm/methods/guest/: Cargo.toml
wasm/methods/guest/src/: main.rs
zkevm/core/src/: lib.rs  main.rs
zkevm/host/: Cargo.toml
zkevm/host/src/: main.rs
zkevm/methods/: Cargo.toml
zkevm/methods/guest/: Cargo.toml
zkevm/methods/guest/src/: main.rs
