[workspace]
resolver = "2"
members = ["host", "methods"]
exclude = ["lib"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

[workspace.dependencies]
# Intra-workspace dependencies
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum.git" ,default-features = false}
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum.git" ,default-features = false}
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum.git" ,default-features = false}

# risc0 monorepo dependencies.
risc0-build = { git = "https://github.com/risc0/risc0", branch = "main", features = ["docker"] }
risc0-zkvm = { git = "https://github.com/risc0/risc0", branch = "main", default-features = false }
risc0-zkp = { git = "https://github.com/risc0/risc0", branch = "main", default-features = false }

alloy-primitives = { version = "0.7", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.7" }
anyhow = { version = "1.0.75" }
bincode = { version = "1.3" }
bytemuck = { version = "1.14" }
ethers = { version = "2.0" }
hex = { version = "0.4" }
log = { version = "0.4" }
erc20-counter-methods = { path = "./methods" }
serde = { version = "1.0", features = ["derive", "std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
