[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.0.1",features = ["client"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"

alloy-primitives = { version = "0.7.6" }
alloy-sol-types = { version = "0.7" }
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum.git", features = ["host"]}
anyhow = "1.0.86"
clap = { version = "4.5", features = ["derive","env"] }
