[package]
name = "zkevm"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.0.5", default-features = false, features = ['std'] }
zkevm-core = { path = "../../core" ,default-features = false}

[patch.crates-io]
radium = { git = 'https://github.com/ferrilab/radium.git', rev = "723bed5" }
